force-app/main/default/objects/RE_Market_Quotes__c/RE_Market_Quotes__c.object-meta.xml
<CustomObject>
    <label>RE Market Quotes</label>
    <nameField>
        <displayFormat>MarketQuote-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Market Quotes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>