force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Daily_Racks_Raw_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Daily_Racks_Raw_Date__c</fullName>
    <label>Daily Racks Raw Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>