force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Move_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Move_Date__c</fullName>
    <label>Move Date</label>
    <type>Date</type>
</CustomField>