force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Rack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack__c</fullName>
    <label>Rack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>