force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Rack_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack_Code__c</fullName>
    <label>Rack Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>