force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Supplier__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier__c</fullName>
    <label>Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>