force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_CND_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Validity_Date__c</fullName>
    <description>Canada Live OPIS Spot Ticker Validity date</description>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>