force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Country_Basis_Sharing_Settings__c.field-meta.xml
<CustomField>
    <fullName>RE_Country_Basis_Sharing_Settings__c</fullName>
    <label>Country Basis Sharing Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>