force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RE_Frequency__c</fullName>
    <label>RE Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>