force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User for tacking Canada OPIS Spot Ticker uploaded records processed or not</description>
    <label>Is Processed?</label>
    <type>Checkbox</type>
</CustomField>