force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_IsMidday__c.field-meta.xml
<CustomField>
    <fullName>RE_IsMidday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMidday</label>
    <type>Checkbox</type>
</CustomField>