force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Source__c</fullName>
    <label>Quote Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPIS</fullName>
            </value>
            <value>
                <fullName>ZEMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>