force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Market Premium</fullName>
            </value>
            <value>
                <fullName>Assessed Premium</fullName>
            </value>
            <value>
                <fullName>Midday</fullName>
            </value>
            <value>
                <fullName>Forward Swap</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>