force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Temperature_Gain_S_cent_l__c.field-meta.xml
<CustomField>
    <fullName>RE_Temperature_Gain_S_cent_l__c</fullName>
    <label>Temperature Gain (S cent/l)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>