force-app/main/default/objects/RE_Market_Quotes__c/fields/RE_Temperature_Gain_USD_BB6__c.field-meta.xml
<CustomField>
    <fullName>RE_Temperature_Gain_USD_BB6__c</fullName>
    <label>Temperature Gain (USD/BB6)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>