force-app/main/default/objects/RE_Market_Quotes__c/fields/Temperature_Gain_MY_cent_l__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gain_MY_cent_l__c</fullName>
    <label>Temperature Gain (MY cent/l)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>