force-app/main/default/objects/RE_Market_Quotes__c/recordTypes/Canada_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Canada_Competitor</fullName>
    <active>true</active>
    <description>Record type for Uploaded Revolution Canada Competitor Data</description>
    <label>Canada Competitor</label>
</RecordType>