force-app/main/default/objects/RE_Market_Quotes__c/recordTypes/Canada_OPIS_Spot_Ticker.recordType-meta.xml
<RecordType>
    <fullName>Canada_OPIS_Spot_Ticker</fullName>
    <active>true</active>
    <description>Record type for Uploaded Revolution Canada Live OPIS Spot Ticker</description>
    <label>Canada OPIS Spot Ticker</label>
</RecordType>