force-app/main/default/objects/RE_Market_Quotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Quote_Type__c</columns>
    <columns>RE_Quote_Name__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Rate_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RE_Tracker__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_Country_Name__c</columns>
    <columns>Temperature_Gain_MY_cent_l__c</columns>
    <columns>RE_Temperature_Gain_S_cent_l__c</columns>
    <columns>RE_Temperature_Gain_USD_BB6__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Country_Name__c</field>
        <operation>notEqual</operation>
        <value>CA</value>
    </filters>
    <label>All</label>
</ListView>