force-app/main/default/objects/RE_Market_Quotes__c/listViews/Broker_Curves.listView-meta.xml
<ListView>
    <fullName>Broker_Curves</fullName>
    <columns>NAME</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Quote_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Quote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Quote_Type__c</field>
        <operation>equals</operation>
        <value>Forward Swap</value>
    </filters>
    <label>Broker Curves</label>
</ListView>