force-app/main/default/objects/RE_Market_Quotes__c/listViews/Canada_Competitor.listView-meta.xml
<ListView>
    <fullName>Canada_Competitor</fullName>
    <columns>NAME</columns>
    <columns>RE_CND_Daily_Racks_Raw_Date__c</columns>
    <columns>RE_CND_Rack_Code__c</columns>
    <columns>RE_CND_Rack__c</columns>
    <columns>RE_CND_Supplier__c</columns>
    <columns>RE_CND_Brand_Indicator__c</columns>
    <columns>RE_CND_Product_Group__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_CND_Move_Date__c</columns>
    <columns>RE_Country_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Market_Quotes__c.Canada_Competitor</value>
    </filters>
    <label>Canada Competitor</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>