force-app/main/default/objects/RE_Market_Quotes__c/listViews/Copy_of_All_som.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_som</fullName>
    <columns>NAME</columns>
    <columns>RE_Quote_Type__c</columns>
    <columns>RE_Quote_Name__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Rate_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RE_Is_MTDWTD__c</columns>
    <columns>RE_Tracker__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_Country_Name__c</columns>
    <columns>Temperature_Gain_MY_cent_l__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Quote_Type__c</field>
        <operation>equals</operation>
        <value>Assessed Premium</value>
    </filters>
    <filters>
        <field>RE_Is_MTDWTD__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/29/2023 12:00 AM</value>
    </filters>
    <label>Copy of All som</label>
</ListView>